# OA-Trabalho_01

./: CMakeLists.txt  README.md  instrucao.txt  separacao.txt
include/: header.hpp  lista.h  pilha.h
source/: .setup.py.swp  func.c  indicelista1.ind  indicelista2.ind  indiceprimario.cpp  indicesec.cpp  indicesecundario.cpp  intercalacao.cpp  interface.cpp  lista.cpp  lista1.txt  lista12.txt  listainv1  listainv1.txt  listainv2.txt  main.c  main.cpp  makefile  ordenacao.cpp  secundarykey1.txt  secundarykey2.txt  teste  teste_inter.cpp
